<resources>
    <string name="app_name">ImageProcessing</string>
    <string name="action_OpenGallery">Open Image File</string>
    <string name="action_GrayScale">To grayscale</string>
    <string name="action_PerspectiveTransform">Perspective Transform</string>
    <string name="action_Binary">To binary</string>
    <string name="action_EqualizeHisto">Equalize Histogram</string>
    <string name="action_Gamma">Gamma correction</string>
    <string name="action_Contrast">Contrast enhancement</string>
    <string name="action_blur">Gaussian blur</string>
    <string name="action_fft">Fourier Transform</string>
    <string name="action_fft_filter">FFT Filtering</string>
</resources>
